# ocaml-algos

./: README.md  algos.opam
src/: avl.ml  bst.ml  compare.ml  dune  list.ml  map.ml  order.ml  pq.ml  queue.ml  stack.ml  stack.mli
test/: dune  test_avl.ml  test_bst.ml  test_list.ml  test_map.ml  test_pq.ml  test_queue.ml  test_stack.ml
